Add another section

--- a/index.html
+++ b/index.html
@@ -2,18 +2,6 @@
 <html>
 <head>
 <style>
-.accordion:after {
-  content: '\002B';
-  color: #777;
-  font-weight: bold;
-  float: right;
-  margin-left: 5px;
-}
-
-.active:after {
-  content: "\2212";
-}
-
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
   background-color: #eee;
@@ -46,16 +34,16 @@
 <body>
   <button class="accordion">Section 1</button>
     <div class="panel">
-      <p>Lorem ipsum...</p>
+      <p>Esta es la seccion 1.</p>
     </div>
   <button class="accordion">Section 2</button>
     <div class="panel">
-      <p>Lorem ipsum...</p>
+      <p>LEsta es la seccion 2.</p>
     </div>
 
   <button class="accordion">Section 3</button>
     <div class="panel">
-      <p>Lorem ipsum...</p>
+      <p>Esta es la seccion 3.</p>
     </div>
 
 
