--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
@@ -20,48 +21,63 @@
   background-color: #ccc;
 }
     
-/* Style the accordion panel. Note: hidden by default */
 .panel {
   padding: 0 18px;
   background-color: white;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.2s ease-out;
+  transition: max-height 0.50s ease-out;
+}
+
+.accordion:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: #777;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
 }
 </style>
 </head>
 
 <body>
-  <button class="accordion">Section 1</button>
-    <div class="panel">
-      <p>Esta es la seccion 1.</p>
-    </div>
-  <button class="accordion">Section 2</button>
-    <div class="panel">
-      <p>LEsta es la seccion 2.</p>
-    </div>
+<h2>Accordion</h2>
 
-  <button class="accordion">Section 3</button>
-    <div class="panel">
-      <p>Esta es la seccion 3.</p>
-    </div>
+<button class="accordion">Section 1</button>
+  <div class="panel">
+    <p>Esta es la seccion 1.</p>
+  </div>
 
 
-  <script>
-    var acc = document.getElementsByClassName("accordion");
-    var i;
-        
-    for (i = 0; i < acc.length; i++) {
-      acc[i].addEventListener("click", function() {
-        this.classList.toggle("active");
-        var panel = this.nextElementSibling;
-        if (panel.style.display === "block") {
-          panel.style.display = "none";
-        } else {
-            panel.style.display = "block";
-          }
-      });
+<button class="accordion">Section 2</button>
+  <div class="panel">
+    <p>Esta es la seccion 2.</p>
+  </div>
+
+
+<button class="accordion">Section 3</button>
+  <div class="panel">
+    <p>Esta es la seccion 3.</p>
+  </div>
+
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var panel = this.nextElementSibling;
+    if (panel.style.maxHeight) {
+      panel.style.maxHeight = null;
+    } else {
+      panel.style.maxHeight = panel.scrollHeight + "px";
     }
-  </script>
+  });
+}
+</script>
 </body>
 </html>
