--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
 .active, .accordion:hover {
   background-color: #ccc;
 }
-.all{
+body{
   min-height: 100vh;
   min-width: 100vw;
 }
+.all{
+  min-height: 100vh;
+  min-width: 100vw;
+  margin:0;
+}
 .conteiner{
   display: grid;
-  padding-left:9%;
+  padding-left: 10%;
   text-align: center;
 } 
 .sideBar{
@@ -46,10 +51,12 @@
   transition: max-height 0.50s ease-out;
 }
 footer {
-  display: flex;
-  justify-content: flex-end;
-  flex-direction: column;
-  background-color: aquamarine;
+   margin-bottom: 0%;
+   text-align: center;
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
+   background:#6cf;
 }
 .accordion:after {
   content: '\02795'; /* Unicode character for "plus" sign (+) */
