fix some errors

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 .active, .accordion:hover {
   background-color: #ccc;
 }
+
 body{
   min-height: 100vh;
   min-width: 100vw;
+  margin-bottom: 0;
 }
 .all{
   min-height: 100vh;
@@ -31,7 +33,7 @@ body{
 }
 .conteiner{
   display: grid;
-  padding-left: 10%;
+  padding-left: 9%;
   text-align: center;
 } 
 .sideBar{
@@ -51,12 +53,12 @@ body{
   transition: max-height 0.50s ease-out;
 }
 footer {
-   margin-bottom: 0%;
-   text-align: center;
-   bottom:0;
-   width:100%;
-   height:60px;   /* Height of the footer */
-   background:#6cf;
+  margin-bottom: 0%;
+  text-align: center;
+  bottom:0;
+  width:100%;
+  height:60px;   /* Height of the footer */
+  background:#6cf;
 }
 .accordion:after {
   content: '\02795'; /* Unicode character for "plus" sign (+) */
@@ -148,9 +150,11 @@ footer {
     </div>
 </div>
 </div>
+
 <footer>
-  <p>Sabeee</p>
+  <p>footer</p>
 </footer>
+
 <script>
 var acc = document.getElementsByClassName("accordion");
 var i;
